<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * LICENSE: GPL v3 
 * 
 * Copyright (c) 2013 by
 * Daniel Friedrich <friedrda@dhbw-loerrach.de>
 * Simon Riedinger <riedings@dhbw-loerrach.de>
 * Patrick Strittmatter <strittpa@dhbw-loerrach.de> 
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License version 3.0 as published by
 * the Free Software Foundation.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->


<!--
/**
 * @author: friedrda, riedings 
 */
-->
<resources>

    <!-- GENERAL -->
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_ok">Ok</string>

    <!-- MAIN VIEW -->
    <string name="app_name">CampusApp</string>
    <string name="app_start_calendar">Calendar</string>
    <string name="app_start_moodle">Moodle</string>
    <string name="app_start_mensa">Mensa</string>
    <string name="app_start_buildings">Site Plan</string>
    <string name="app_start_hello_world">Hello Droid</string>
    <string name="app_start_feedback">Feedback</string>
    <string name="start_app_testversion_timeleft">Testversion ends on: </string>
    <string name="start_app_testversion_timeover">Test period ended, please install the current Version from the Google PlayStore.
        \n\nOn any problems, please contact us at 
        \nfriedrda@dhbw-loerrach.de</string>

    <!-- MAIN VIEW -->
    <!-- INFO -->
    <string name="startpage_menu_info">Info</string>
    <string name="app_start_facebook_profile_id_szi">189992694374119</string>
    <string name="app_start_info_daniel">Daniel Friedrich</string>
    <string name="app_start_info_patrick">Patrick Strittmatter</string>
    <string name="app_start_info_simon">Simon Riedinger</string>
    <string name="app_start_info_introducion">This app was created in a student project of studycenter computer science at the University of Cooperative Education Loerrach.</string>
    <string name="app_start_info_version">Version: </string>
    <string name="app_start_info_study_center_compuet_sience">Studycenter computer science DHBW Lörrach</string>
    <string name="app_start_info_impressum">Impressum: \nProf. Dr. Klemens Schnattinger \nHangstrasse 46-50 \n79539 Loerrach \nGermany</string>
    <string name="app_start_info_project_develpment_by">The initiators of this project: </string>
    <string name="app_start_info_suppliers"></string>
    <string name="app_start_info_copyright_icons">COPYRIGHT:
        \nThe copyright of the icons of Site Map, Mensa and Moodle are at the students of the course MWI at Cooperative State University Karlsruhe and under the direction of Prof. Dr. Wengler.</string>
    <string name="app_start_info_copyright_code">LICENSE: GPL v3
        \nCopyright (c) 2013 by
        \nDaniel Friedrich friedrda@dhbw-loerrach.de
        \nSimon Riedinger riedings@dhbw-loerrach.de        
        \nPatrick Strittmatter campusapp.strittmatter@gmail.com
        \nSource code: https://github.com/DHBW-Loerrach 
 \n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3.0 as published by the Free Software Foundation.
 \n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 \n\nYou should have received a copy of the GNU General Public License
 along with this program.  If not, see 
 \nwww.gnu.org/licenses/.</string>
    <string name="app_start_facebook_prodile_id_szi">189992694374119</string>

    <!-- MENSA -->
    <string name="mensa_error_not_installed">The DHBW Mensa App is not installed!</string>
    <string name="mensa_playstore_id">de.dhbw.mensa</string>
    <string name="mensa_playstore_not_installed">You dont have Google Play installed</string>

    <!-- CALENDAR -->
    <!-- CALENDAR BACKEND -->
    <string name="calendar_backend_account_action_settings">Settings</string>
    <string name="calendar_backend_account_label">CampusApp - Calendar</string>
    <string name="calendar_backend_account_tab_title_by_list">standard</string>
    <string name="calendar_backend_account_tab_title_by_hand">advanced</string>
    <string name="calendar_backend_account_ui_activity_authenticating">ui_activity_authenticating</string>
    <string name="calendar_backend_account_select_ical_activity_newaccount_text">select a calendar:</string>
    <string name="calendar_backend_account_select_ical_ok_button">ok</string>
    <string name="calendar_backend_account_select_ical_cancel_button">cancel</string>
    <string name="calendar_backend_account_select_ical_update_button">update calendar list</string>
    <string name="calendar_backend_account_select_ical_new_calendar">add new Calendar</string>
    <string name="calendar_backend_input_select_calendar">select calendar</string>
    <string name="calendar_backend_input_error_no_calendar_selected">ERROR: no calendar selected!</string>
    <string name="calendar_backend_input_error_displayname_to_short">ERROR: input too short, min. 3 letters!</string>
    <string name="calendar_backend_input_error_displayname_to_long">ERROR: input too long, max. 16 letters!</string>
    <string name="calendar_backend_input_error_displayname_invalid">ERROR: only letters, numbers and whitespaces!</string>
    <string name="calendar_backend_input_error_icalurl_to_short">ERROR: too short, min. 11 letters!</string>
    <string name="calendar_backend_input_error_icalurl_invalid">ERROR: ical URL is invalid!</string>
    <string name="calendar_backend_input_error_calendar_already_exists">ERROR: calendar already exists!</string>
    <string name="calendar_backend_network_error">No network connection, can&#8217;t add new calendar</string>
    <string name="calendar_backend_update_already_done">calendar list is already up to date</string>
    <string name="calendar_backend_update_updating">calendar list is updating ...</string>
    <string name="calendar_backend_update_xml_error">ERROR: can&#8217;t update caledar list!</string>
    <string name="calendar_backend_update_successful">update was successful</string>
    <string name="calendar_backend_adding_new_calendar">adding new calendar</string>
    <string name="calendar_backend_account_add_calendar_manual">add calendar</string>
    <string name="calendar_backend_account_display_name">Display Name</string>
    <string name="calendar_backend_account_ical_url">iCal URL</string>

    <!-- CALENDAR FRONTEND -->

    <string name="calendar_frontend_list_goto_today">Go to the next event</string>
    <string name="calendar_frontend_drawer_open">Open navigation drawer</string>
    <string name="calendar_frontend_drawer_close">Close navigation drawer</string>
    <string name="calendar_frontend_delete_calendar">Are you sure to delete the actual calendar?</string>
    <string name="calendar_frontend_delete_calendar_dialog_heading">Please confirm</string>
    <string name="calendar_frontend_facebook_started">Facebook started. Please wait...</string>
    <string name="calendar_frontend_no_events">There are no events in this Calendar</string>
    <string name="calendar_frontend_notice">Notice</string>
    <string name="calendar_frontend_updateing_calendar">updating calendar...</string>

    <!-- CALENDAR FRONTEND -->
    <!-- MENU -->
    <string name="calendar_menu_new_calendar">new calendar</string>
    <string name="calendar_menu_preferences">settings</string>
    <string name="calendar_menu_delete_calendar">delete calendar</string>
    <string name="calendar_menu_refresh_the_calendar">Refresh the Calendar</string>
    <string name="calendar_menu_jump_to_today">Jump to Today</string>

    <!-- BUILDINGS -->
    <string name="buildings_image_title_map_kbc">KBC site plan</string>
    <string name="buildings_image_title_map_hangstr">Hangstr. site plan</string>
    <string name="buildings_image_title_buildings_hangstr">Hangstr. site plan</string>

</resources>