<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * LICENSE: GPL v3 
 * 
 * Copyright (c) 2013 by
 * Daniel Friedrich <friedrda@dhbw-loerrach.de>
 * Simon Riedinger <riedings@dhbw-loerrach.de>
 * Patrick Strittmatter <strittpa@dhbw-loerrach.de> 
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License version 3.0 as published by
 * the Free Software Foundation.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->


<!--
/**
 * @author: friedrda 
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="6dip" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="6dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="42.75"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/start_button_calendar"
                    style="@style/Button"
                    android:layout_height="120dp"
                    android:drawableTop="@drawable/ic_calendar"
                    android:onClick="startCalendarActivity"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="@string/app_start_calendar"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/start_button_buildings"
                    style="@style/Button"
                    android:layout_height="120dp"
                    android:drawableTop="@drawable/ic_buildings"
                    android:onClick="startGebaudeActivity"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="@string/app_start_buildings"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/start_button_mensa"
                    style="@style/Button"
                    android:layout_height="120dp"
                    android:drawableTop="@drawable/ic_mensa"
                    android:onClick="startMensaActivity"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="@string/app_start_mensa"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:typeface="sans" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/main_grey_line" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/start_button_feedback"
                    style="@style/Button"
                    android:layout_height="120dp"
                    android:drawableTop="@drawable/ic_feedback"
                    android:onClick="startOnlineFeedback"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:singleLine="true"
                    android:text="@string/app_start_feedback"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/start_button_spacer"
                    style="@style/Button"
                    android:layout_height="120dp"
                    android:drawableTop="@drawable/ic_spacer"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:typeface="sans" />

                <!--
                <Button
                    android:id="@+id/start_button_moodle"
                    style="@style/Button"
                    android:layout_height="120dp"
                    android:drawableTop="@drawable/ic_moodle"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="@string/app_start_moodle"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/start_button_hello_world"
                    style="@style/Button"
                    android:layout_height="120dp"
                    android:drawableTop="@drawable/ic_hello_world"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:singleLine="false"
                    android:text="@string/app_start_hello_world"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:typeface="sans" />
                -->

                <Button
                    android:id="@+id/start_button_spacer"
                    style="@style/Button"
                    android:layout_height="120dp"
                    android:drawableTop="@drawable/ic_spacer"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:typeface="sans" />

                <!--
                <Button
                    android:id="@+id/start_button_news"
                    style="@style/Button"
                    android:layout_height="100dp"
                    android:drawableTop="@drawable/ic_news"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="News"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:typeface="sans" />
                -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/main_grey_line" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <!-- android:orientation="horizontal" > -->


                <!-- BANNER TEST VERSION -->

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dip"
                    android:src="@drawable/img_start_banner_testversion" />

                <TextView
                    android:id="@+id/start_app_testversion_timeleft_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dip"
                    android:text=""
                    android:textColor="@color/darkGray"
                    android:textSize="25dip"
                    android:textStyle="bold" />

                <!-- BANNER RAUM FUER WEITERE IDEEN -->
                <!--
                <ImageView                    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_start_banner_ideas" />
                -->


                <!--
                <Button
                    android:id="@+id/start_button_blackboard"
                    style="@style/Button"
                    android:layout_height="100dp"
                    android:drawableTop="@drawable/main_schwarzesbrett"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="Schwarzes Brett"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/start_button_bibliothek"
                    style="@style/Button"
                    android:layout_height="100dp"
                    android:drawableTop="@drawable/ic_bibliothek"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="Bibliothek"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/start_button_dualis"
                    style="@style/Button"
                    android:layout_height="100dp"
                    android:drawableTop="@drawable/ic_dualis"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:text="Dualis"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    android:typeface="sans" />
                -->

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>